@@ -37,5 +37,5 @@ Suggests:
 	scRNAseq
 VignetteBuilder: knitr
 LazyData: true
-RoxygenNote: 5.0.1
+RoxygenNote: 6.0.1
 biocViews: Clustering, RNASeq, Sequencing, Software, SingleCell
